--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -12,6 +12,7 @@ h4 {
     font-weight: 700;
     line-height: var(--leading-tight);
     color: var(--color-text);
+    text-wrap: balance;
 }
 
 h1 { font-size: var(--text-4xl); }
